@@ -238,6 +238,8 @@ void print_usage(void)
 	printf(" -W : Specifies a timeout in seconds how long to process incoming MQTT messages.\n");
 #endif
 	printf(" --help : display this message.\n");
+	printf(" --pretty : print formatted output rather than minimised output when using the\n");
+	printf("            JSON output format option.\n");
 	printf(" --quiet : don't print error messages.\n");
 	printf(" --retained-only : only handle messages with the retained flag set, and exit when the\n");
 	printf("                   first non-retained message is received.\n");
