@@ -24,6 +24,8 @@ Clients:
 - Use cJSON library for producing JSON output, where available. Closes #1222.
 - Add support for outputting MQTT v5 property information to mosquitto_sub/rr
   JSON output.
+- Add `--pretty` option to mosquitto_sub/rr for formatted/unformatted JSON
+  output.
 
 
 1.6.7 - 20190925
